src/snapshots/jj_pr__tests__conflicted_merged_null_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
delete conflicted bookmark feat (#1, merged)
abandon merged #1
