src/snapshots/jj_pr__tests__conflicted_no_null_blocks_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
ERROR: Conflicted bookmark(s): feat. Resolve with `jj bookmark` before syncing.
