src/snapshots/jj_pr__tests__conflicted_working_copy_show.snap
---
source: src/tests.rs
expression: render_show(&f)
---
[31m@[0m  [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m*  [33mDraft[0m  [1m[35mfeat[0m
│  PR #1
[1m[36m◆[0m  [1m[32mtrunk()[0m
[2m~[0m  [2m(elided revisions)[0m
