src/snapshots/jj_pr__tests__create_already_exists.snap
---
source: src/tests.rs
expression: "plan_create(&f, \"feat\")"
---
ERROR: bookmark 'feat' already has #1 — use `jj-pr sync` to update it
