src/snapshots/jj_pr__tests__create_conflicted_bookmark.snap
---
source: src/tests.rs
expression: "plan_create(&f, \"feat\")"
---
ERROR: bookmark 'feat' is conflicted — resolve with `jj bookmark set feat` before creating a PR
