src/snapshots/jj_pr__tests__create_intermediate_pr_sync_after.snap
---
source: src/tests.rs
assertion_line: 751
expression: plan_sync(&f)
---
push: #1 (feat-c)
  update #1 title -> "commit c"
update #1 (feat-c) base -> feat-b
