src/snapshots/jj_pr__tests__create_new_pr.snap
---
source: src/tests.rs
assertion_line: 675
expression: "plan_create(&f, \"feat\")"
---
push feat
create PR: "second commit" (main ← feat) [draft]
stamp trailer on 2 commit(s)
