src/snapshots/jj_pr__tests__create_stacked_pr.snap
---
source: src/tests.rs
assertion_line: 697
expression: "plan_create(&f, \"feat-b\")"
---
push feat-b
create PR: "child" (test:feat-a ← test:feat-b) [draft]
stamp trailer on 1 commit(s)
